Minor changes to header and footer

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
 
     <div class="header">
-        <h1 class="logo">Header logo</h1>
+        <h1 class="logo">Yu Teng's Webpage</h1>
         <ul class="links">
-            <a>header link one</a>
-            <a>header link two</a>
-            <a>header link three</a>
+            <a>Blogs</a>
+            <a>About</a>
+            <a>Contact Me</a>
         </ul>
     </div>
 
@@ -79,7 +79,7 @@
     </div>
 
     <div class="footer">
-        Copyright ⓒ The Odin Project 2021
+        Copyright ⓒ Wang Yu Teng 2022
     </div>
 
 </body>
