Changed certain texts

--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
     <div class="container1">
         <div class="text">
             <div class="main">This website is awesome</div>
-            <div class="secondary">This website has some some subset that goes header
-                under the main title. It's a smaller font and the color is lower contrast.
+            <div class="secondary">
+                This website is my first webpage that I coded using CSS and HTML following TOP. <br>
+                I plan to continue upgrading my development skills through the course and exploring other resources. I aspire to make creative apps and beautiful websites
+                for everyone to use.
             </div>
-            <button class="button1">Sign up</button>
+            <button class="button1">Contact Me!</button>
         </div>
         <img class="placeholder" alt='image placeholder' src="images/placeholder.png">
     </div>
 
     <div class="container2">
-        <h2>Some random information.</h2>
+        <h2>My Projects</h2>
         <div class="images">
             <div class="imagetext">
                 <img src="images/placeholder2.png" alt="small image">
