Changed Texts + Added Icons
- Changed all the placeholder images
- Changed main text
- Resized images
- Respaced skills Icons

--- a/index.html
+++ b/index.html
@@ -25,33 +25,33 @@
         <div class="text">
             <div class="main">This website is awesome</div>
             <div class="secondary">
-                This website is my first webpage that I coded using CSS and HTML following TOP. <br>
-                I plan to continue upgrading my development skills through the course and exploring other resources. I aspire to make creative apps and beautiful websites
-                for everyone to use.
+                <strong>Hello!</strong> <br>
+                This is my first webpage that I coded using CSS and HTML. <br>
+                I aspire to create useful apps and beautiful websites.
             </div>
             <button class="button1">Contact Me!</button>
         </div>
-        <img class="placeholder" alt='image placeholder' src="images/placeholder.png">
+        <img class="computer" alt='computer gif' src="images/computer.gif">
     </div>
 
     <div class="container2">
-        <h2>My Projects</h2>
+        <h2>My Skills</h2>
         <div class="images">
             <div class="imagetext">
-                <img src="images/placeholder2.png" alt="small image">
-                <div class="subtext">this is some subtext under an illustration or image</div>
+                <img src="images/pythonicon.png" alt="python icon">
+                <div class="subtext">Python</div>
             </div>
             <div class="imagetext">
-                <img src="images/placeholder2.png" alt="small image">
-                <div class="subtext">this is some subtext under an illustration or image</div>
+                <img src="images/frontendicon.png" alt="front end icon">
+                <div class="subtext">HTML, CSS, JavaScript</div>
             </div>
             <div class="imagetext">
-                <img src="images/placeholder2.png" alt="small image">
-                <div class="subtext">this is some subtext under an illustration or image</div>
+                <img src="images/Cicon.png" alt="C icon">
+                <div class="subtext">C</div>
             </div>
             <div class="imagetext">
-                <img src="images/placeholder2.png" alt="small image">
-                <div class="subtext">this is some subtext under an illustration or image</div>
+                <img src="images/git.png" alt="git icon">
+                <div class="subtext">Git</div>
             </div>
         </div>
     </div>
