Changed the quote
- changed quote content
- fixed sign off placement

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
     <div class="qcontainer">
         <div class="quote">
-            <em>This is an inspiring quote, or a testimonial from a customer.
-            Maybe it's just filling up space, or maybe people will actually
-            read it. Who Knows? All I know is that it looks nice.</em>
-
+            <em>
+                The Capacity to learn is a gift; the ability to learn is a skill;
+                the willingness to learn is a choice.
+            </em>
         </div>
         <div class="signoff">
-            - Thor, God of Thunder
+            - Brian Herbert
         </div>
     </div>
 
